--- a/payeredge.html
+++ b/payeredge.html
@@ -58,6 +58,7 @@
     select:focus{ box-shadow:0 0 0 3px rgba(114,168,255,.25) }
     #status{ margin-left:auto; padding:6px 10px; border-radius:999px; border:1px dashed var(--line); background:#0b1422; color:var(--muted) }
 
+    /* Cards */
     .stack{ display:grid; gap:18px; grid-template-columns:repeat(auto-fit, minmax(320px,1fr)); align-items:stretch; margin-top:16px }
     .tier{ background:linear-gradient(180deg, #0f1726, #0c1422); border:1px solid var(--line); border-radius:var(--radius); box-shadow: var(--shadow-lg); padding:16px; transition:.25s }
     .tierHead{display:grid; grid-template-columns:1fr auto; align-items:center; gap:10px; margin-bottom:12px}
@@ -76,6 +77,7 @@
     .code{font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; font-size:12px; color:#cfe1ff}
     .money{font-weight:800}
 
+    /* per-code breakdown block */
     .break { margin:6px 0 10px; background:#0b1424; border:1px solid var(--line); border-radius:10px; }
     .break table{ width:100%; border-collapse:collapse; }
     .break th,.break td{ border:0; padding:6px 8px; text-align:left; font-size:12px; }
@@ -131,8 +133,9 @@
     <div id="stack" class="stack"></div>
   </main>
 
+  <!-- Error overlay (keeps blank screens away) -->
   <script>
-    if (!window.__PAYEREDGE_V12__) {
+    if (!window.__PAYEREDGE_V13__) {
       (function(){
         function showErrorOverlay(err, where){
           const wrap = document.createElement('div');
@@ -148,17 +151,17 @@
   </script>
 
   <script>
-  if (window.__PAYEREDGE_V12__) {
+  if (window.__PAYEREDGE_V13__) {
     console.warn('PayerEdge script already loaded; skipping second init.');
   } else {
-    window.__PAYEREDGE_V12__ = true;
+    window.__PAYEREDGE_V13__ = true;
 
     /* ================== Config & utils ================== */
-    const DEFAULT_CSV = 'data/vsp_choice_master_v7_full_fixed.csv';
+    const DEFAULT_CSV = 'data/vsp_choice_master_v7_full_fixed.csv'; // use the patched file you just saved
 
-    const BETTER_CAP_OF_MAX = 0.75;
-    const GOOD_CAP_OF_MAX   = 0.50;
-    const CAP_RELAX_FACTOR  = 0.90;
+    const BETTER_CAP_OF_MAX = 0.75; // ≤75% of max copay
+    const GOOD_CAP_OF_MAX   = 0.50; // ≤50% of max copay
+    const CAP_RELAX_FACTOR  = 0.90; // fallback relaxer
 
     const el = (id)=>document.getElementById(id);
     const sum = (a)=>a.reduce((x,y)=>x+y,0);
@@ -171,15 +174,18 @@
     const isGlassBase = row => /glass/i.test(N(row?.enhancement || row?.subtype || ''));
     const preferPhotoCodeForBase = row => (isGlassBase(row) ? 'PM' : 'PR');
 
+    // Split "NA + ND", "JA+JB", "NA/NJ", "OA,OD" etc.
     const splitCodes = (s)=> String(s||'')
       .toUpperCase().replace(/[^\w+&/,\s-]/g,'')
       .split(/[\s+&/,\-]+/).map(t=>t.trim()).filter(Boolean);
 
+    // Extract numbers in order from copay like "$175 + $35" => [175,35]  or "$210" => [210]
     function parseCopayNumbers(copayStr){
       const m = String(copayStr||'').match(/[0-9]+(?:\.[0-9]{1,2})?/g);
       return m ? m.map(x=>parseFloat(x)) : [];
     }
 
+    /* CSV parsing & cache */
     function parseCSV(text){
       const rows=[]; let row=[], field='', q=false;
       for(let i=0;i<text.length;i++){
@@ -195,7 +201,6 @@
         const o={}; headers.forEach((h,i)=>o[h]=(r[i]||'').replace(/^\"|\"$/g,'').trim()); return o;
       });
     }
-
     const CACHE_KEY='rev-vsp-choice-csv-v1';
     const META_KEY='rev-vsp-choice-meta-v1';
     const setCache=(t,m)=>{ localStorage.setItem(CACHE_KEY,t); localStorage.setItem(META_KEY,JSON.stringify(m)); };
@@ -203,7 +208,7 @@
     const clearCacheStorage=()=>{ localStorage.removeItem(CACHE_KEY); localStorage.removeItem(META_KEY); };
 
     let DATA=[];
-    let SIMPLE_BY_CODE = new Map(); // code -> array<single-code rows>
+    let SIMPLE_BY_CODE = new Map(); // code -> array of single-code rows (not composites)
 
     function buildSimpleIndex(){
       SIMPLE_BY_CODE = new Map();
@@ -217,7 +222,7 @@
       }
     }
 
-    // **** EXACT base-row picker (A-code base) ****
+    // Exact base-row picker (A-code base). If multiple, prefer "plastic" (not "high").
     function pickBaseByExactCode(baseCode){
       const list = SIMPLE_BY_CODE.get(baseCode) || [];
       if (!list.length) return null;
@@ -233,7 +238,7 @@
         const res = await fetch(DEFAULT_CSV,{cache:'no-store'});
         if(!res.ok) throw new Error('HTTP '+res.status);
         const text = await res.text();
-        const meta = { plan:'VSP_plan', version:new Date().toISOString().slice(0,10)+'.gbb', source:'network:'+DEFAULT_CSV, sha:quickHash(text) };
+        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui13', source:'network:'+DEFAULT_CSV, sha:quickHash(text) };
         setCache(text, meta);
         DATA = parseCSV(text);
         buildSimpleIndex();
@@ -254,7 +259,7 @@
       }
     }
     function renderMeta(count, meta){
-      el('version').textContent = `plan=${meta.plan||'VSP_plan'} • rows=${count||0} • version=${meta.version||'—'} • source=${meta.source||'—'} • sha=${meta.sha||'—'}`;
+      el('version').textContent = `plan=${meta.plan||'VSP_choice'} • rows=${count||0} • version=${meta.version||'—'} • source=${meta.source||'—'} • sha=${meta.sha||'—'}`;
     }
 
     const byKey=(k)=>DATA.filter(r=>(r.active||'yes').toLowerCase()==='yes' && (r.exclusive_key||'').toLowerCase()===k);
@@ -267,7 +272,12 @@
       return true;
     }
 
-    // ====== LINE MATH with exact base selection ======
+    /* ===== Per-line math (composites split into base A + add-on(s)) =====
+       - Base (first code) uses the single-code A row (copay & holdback).
+       - If composite copay is a single total (no "+"), add-on copay = total − base copay.
+       - Add-on holdback = composite row’s chargeback (evenly split if multiple add-ons).
+       - Service fee per item = copay − holdback.
+    */
     function line(row){
       const desc = row.enhancement || row.subtype || '—';
       const codeStr = String(row.code||'').trim().toUpperCase();
@@ -279,14 +289,14 @@
         return { name:desc, code:codeStr, copay:cop, chargeback:cb, profit:cop-cb, parts:[] };
       }
 
-      // Composite: Base = exact A code row; Add-on = remainder (or explicit split)
-      const compositeCopayNums = parseCopayNumbers(row.copay);
+      // Composite
+      const compositeCopayNums = parseCopayNumbers(row.copay); // e.g., [175,35] or [210]
       const compositeTotalCopay = num(row.copay);
       const compositeAddOnCB = num(row.chargeback);
 
       const parts = [];
 
-      // Base part (first code)
+      // Base part from exact A-code row
       const baseCode = partsCodes[0];
       const baseRow  = pickBaseByExactCode(baseCode);
       const baseCop  = baseRow ? num(baseRow.copay)      : (compositeCopayNums[0] ?? compositeTotalCopay);
@@ -296,9 +306,10 @@
       // Add-ons
       const addonCount = partsCodes.length - 1;
 
+      // Copays for add-ons
       let addonCopays = [];
       if (compositeCopayNums.length >= partsCodes.length){
-        addonCopays = compositeCopayNums.slice(1); // explicit "+ $xx"
+        addonCopays = compositeCopayNums.slice(1); // use explicit splits if present
       } else {
         const remaining = Math.max(compositeTotalCopay - baseCop, 0);
         if (addonCount <= 1){
@@ -309,6 +320,7 @@
         }
       }
 
+      // Holdback for add-ons from the composite row
       const addonCBEach = addonCount <= 1 ? compositeAddOnCB : (compositeAddOnCB / addonCount);
 
       for (let i=1;i<partsCodes.length;i++){
@@ -334,6 +346,7 @@
       return { label, lines, copay:cop, chargeback:cb, profit:pr, ratio };
     }
 
+    /* ===== UI ===== */
     function animateNumber(el,to){
       const from=parseFloat(el.getAttribute('data-prev')||'0'); const start=performance.now(); const dur=380;
       function step(t){ const k=Math.min(1,(t-start)/dur); const v=from+(to-from)*(0.5-Math.cos(Math.PI*k)/2); el.textContent=`$${v.toFixed(2)}`; if(k<1)requestAnimationFrame(step); else el.setAttribute('data-prev',to); }
@@ -430,6 +443,7 @@
       for(const row of rows){ stack.appendChild(renderTier(row)); }
     }
 
+    /* ===== material & sun helpers (regex-safe) ===== */
     function materialKey(label) {
       const s = N(label);
       if (s.includes('polycarb')) return 'poly';
@@ -479,6 +493,7 @@
       return null;
     }
 
+    /* ===== Compute bundles ===== */
     function computeBundles(){
       if(!DATA.length){ el('stack').innerHTML=''; return; }
 
@@ -489,6 +504,7 @@
       const wantGlass = el('includeGlass').checked;
       const tintSel = el('lensTint').value;
 
+      // Sun pool (for polarized-as-material and tints)
       const sunAll = byKey('sun_tech').filter(r=>applies(r,fam)).filter(r=>{
         const n=N(r.enhancement);
         if(!wantGlass && n.includes('glass')) return false;
@@ -498,6 +514,7 @@
       const isCustomMeasure = (row) => /custom\s*measure/i.test(N(row?.enhancement || row?.subtype || ''));
       const customPool = DATA.filter(r => applies(r, 'PAL')).filter(isCustomMeasure);
 
+      // Base candidates
       let base = [];
       if (fam === 'PAL') {
         base = byKey('progressive_level').filter(r=>applies(r,fam)).filter(r=>{
@@ -505,11 +522,12 @@
           if(!wantAsp && name.includes('aspheric')) return false;
           if(!wantGlass && name.includes('glass'))  return false;
           if(isCustomMeasure(r)) return false;
-          if (tintSel==='polarized') return /polariz/.test(name);
+          if (tintSel==='polarized') return /polariz/.test(name); // polarized material
           return !/(photochrom|polariz|tint|tinted|sunglass|gradient)/.test(name);
         });
       } else {
         if (tintSel==='polarized') {
+          // SV & LINED: polarized is a D-code *material*
           base = sunAll.filter(r => /polariz/.test(N(r.enhancement)) && isDCode(r));
         } else {
           const pool = (fam==='SV' ? byKey('base_material') : byKey('occupational'));
@@ -523,11 +541,12 @@
         }
       }
 
+      // AR ranked by grade then profit
       function rankAR(ars){
         const gradeVal = (s)=>{ const m=String(s||'').match(/\b([A-D])\b/i); if(!m) return null; return {A:1,B:2,C:3,D:4}[m[1].toUpperCase()]||null; };
         return [...ars].sort((a,b)=>{
           const ga=gradeVal(a.enhancement)||-1, gb=gradeVal(b.enhancement)||-1;
-          if(ga!==gb) return gb-ga;
+          if(ga!==gb) return gb-ga; // prefer A
           const pa=num(a.copay)-num(a.chargeback);
           const pb=num(b.copay)-num(b.chargeback);
           return pb-pa;
@@ -552,6 +571,7 @@
         return;
       }
 
+      // Tier selection (Left→Right)
       const MaxPrice = Math.max(...all.map(b => b.copay));
       function mostProfit(arr){
         let pick=null;
@@ -570,6 +590,7 @@
           }
         }
         if (pick) return pick;
+        // relax once
         const looser = cap / CAP_RELAX_FACTOR;
         for(const b of all){
           if (b.copay <= looser){
@@ -609,6 +630,7 @@
       ]);
     }
 
+    /* Wire-up */
     el('forceRefresh').onclick=()=>{ clearCacheStorage(); loadCSV(); };
     el('clearCache').onclick =()=>{ clearCacheStorage(); el('status').textContent=' cache cleared — click Force Refresh to reload'; };
     ['lensFamily','lensTint','includeAR','includeAspheric','includeOversize','includeGlass','includeCM']
