--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>PayerEdge — VSP Bundles (App)</title>
+  <title>PayerEdge — VSP Bundles (App v17)</title>
 
   <!-- Typography -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,7 +54,7 @@
     .btn:hover{ background:#162844; border-color:#2e4260 }
     .switch{display:inline-flex; align-items:center; gap:8px}
     .switch select, .switch input[type="checkbox"]{ accent-color:var(--accent) }
-    select{ background:#0e1a30; color:var(--fg); border:1px solid var(--line); border-radius:10px; padding:6px 8px; outline:none }
+    select{ background:#0e1a30; color:#fff; border:1px solid var(--line); border-radius:10px; padding:6px 8px; outline:none }
     select:focus{ box-shadow:0 0 0 3px rgba(114,168,255,.25) }
     #status{ margin-left:auto; padding:6px 10px; border-radius:999px; border:1px dashed var(--line); background:#0b1422; color:#c7d6ef }
 
@@ -134,7 +134,7 @@
 
   <!-- Error overlay for runtime issues -->
   <script>
-    if (!window.__PAYEREDGE_V16__) {
+    if (!window.__PAYEREDGE_V17__) {
       (function(){
         function showErrorOverlay(err, where){
           const wrap = document.createElement('div');
@@ -150,14 +150,13 @@
   </script>
 
   <script>
-  if (window.__PAYEREDGE_V16__) {
+  if (window.__PAYEREDGE_V17__) {
     console.warn('PayerEdge APP script already loaded; skipping second init.');
   } else {
-    window.__PAYEREDGE_V16__ = true;
+    window.__PAYEREDGE_V17__ = true;
 
     /* ================== Config & utils ================== */
 
-    // Tries both filenames in both locations. First one that loads wins.
     const CSV_CANDIDATES = [
       './vsp_choice_master_v7_full_fixed_patched.csv',
       './vsp_choice_master_v7_full_fixed.csv',
@@ -165,14 +164,9 @@
       './data/vsp_choice_master_v7_full_fixed.csv'
     ];
 
-    const BETTER_CAP_OF_MAX = 0.75; // ≤75% of max copay
-    const GOOD_CAP_OF_MAX   = 0.50; // ≤50% of max copay
-    const CAP_RELAX_FACTOR  = 0.90; // fallback relaxer
-
-    // Optional safety net if some A-base is still missing from CSV (leave empty now)
-    const BASE_OVERRIDES = {
-      // Example: NA: { copay: 175, chargeback: 95 }
-    };
+    const BETTER_CAP_OF_MAX = 0.75;
+    const GOOD_CAP_OF_MAX   = 0.50;
+    const CAP_RELAX_FACTOR  = 0.90;
 
     const el = (id)=>document.getElementById(id);
     const sum = (a)=>a.reduce((x,y)=>x+y,0);
@@ -181,9 +175,9 @@
     const N = s => String(s||'').toLowerCase();
 
     const isDCode  = r => /^d/i.test((r.code||'').trim());
-    const isPPhoto = r => /^p(m|r)/i.test((r.code||'').trim());
+    const isPPhoto = r => /^p(m|r)\b/i.test((r.code||'').trim());
     const isGlassText = s => /glass/.test(N(s||''));
-    const isGlassBase = row => isGlassText(row?.enhancement || row?.subtype);
+    const isGlassBase = row => isGlassText(row?.enhancement) || isGlassText(row?.subtype);
     const preferPhotoCodeForBase = row => (isGlassBase(row) ? 'PM' : 'PR');
 
     const splitCodes = (s)=> String(s||'')
@@ -218,7 +212,7 @@
     const clearCacheStorage=()=>{ localStorage.removeItem(CACHE_KEY); localStorage.removeItem(META_KEY); };
 
     let DATA=[];
-    let SIMPLE_BY_CODE = new Map(); // code -> array of single-code rows (not composites)
+    let SIMPLE_BY_CODE = new Map(); // code -> array of single-code rows
 
     function buildSimpleIndex(){
       SIMPLE_BY_CODE = new Map();
@@ -230,18 +224,6 @@
           SIMPLE_BY_CODE.get(code).push(r);
         }
       }
-    }
-
-    function pickSingleByCode(code, fam, wantGlassOnly){
-      const list = (SIMPLE_BY_CODE.get(code) || [])
-        .filter(r => applies(r, fam))
-        .filter(r => wantGlassOnly ? isGlassBase(r) : !isGlassBase(r));
-      if (!list.length) return null;
-      // Prefer the one that “sounds” most canonical for the code
-      return list.sort((a,b)=>{
-        const aS=(a.enhancement||a.subtype||'').length, bS=(b.enhancement||b.subtype||'').length;
-        return aS - bS; // shorter label first
-      })[0];
     }
 
     function pickBaseByExactCode(baseCode){
@@ -276,7 +258,7 @@
       }
 
       if (loaded){
-        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui16', source:'network:'+loaded.url, sha:quickHash(loaded.text) };
+        const meta = { plan:'VSP_choice', version:new Date().toISOString().slice(0,10)+'.ui17', source:'network:'+loaded.url, sha:quickHash(loaded.text) };
         setCache(loaded.text, meta);
         DATA = parseCSV(loaded.text);
         buildSimpleIndex();
@@ -302,22 +284,15 @@
       const errs = tried.map(t => `<li><code>${t.url}</code> → ${t.ok ? 'OK' : t.err}</li>`).join('');
       let hint = '';
       if (location.protocol === 'file:') {
-        hint = `<div style="margin-top:6px">You opened this file via <code>file://</code>. Start a tiny local server instead:
-                <br/><code>python -m http.server 8080</code> → open <code>http://localhost:8080/app.html</code></div>`;
+        hint = `<div style="margin-top:6px">Open via a local server:
+                <br/><code>python -m http.server 8080</code> → <code>http://localhost:8080/app.html</code></div>`;
       }
       diag.innerHTML = `
         <b>Load failed — no cache available.</b>
-        <div style="margin-top:6px">I tried these paths (first wins):</div>
+        <div style="margin-top:6px">Tried these paths (first wins):</div>
         <ul>${urls}</ul>
         <div style="margin-top:6px">Results:</div>
-        <ul>${errs}</ul>
-        <div style="margin-top:6px"><b>Fix it fast:</b>
-          <ol>
-            <li>Place <code>vsp_choice_master_v7_full_fixed_patched.csv</code> beside this HTML (or under <code>./data/</code>).</li>
-            <li>Open via a local server (not <code>file://</code>).</li>
-            <li>Click <b>Clear Cache</b>, then <b>Force Refresh</b>.</li>
-          </ol>
-        </div>${hint}`;
+        <ul>${errs}</ul>`;
       el('status').textContent = ' load failed (see diagnostics below)';
       document.querySelector('main').appendChild(diag);
     }
@@ -348,31 +323,25 @@
         return { name:desc, code:codeStr, copay:cop, chargeback:cb, profit:cop-cb, parts:[] };
       }
 
-      // Composite
-      const compositeCopayNums = parseCopayNumbers(row.copay); // e.g., [175,35] or [210]
+      // Composite (split by A + addons)
+      const compositeCopayNums = parseCopayNumbers(row.copay);
       const compositeTotalCopay = num(row.copay);
       const compositeAddOnCB = num(row.chargeback);
 
       const parts = [];
 
-      // Base part from exact A-code row (or override if truly missing)
+      // Base part from exact A-code row (or fallback)
       const baseCode = partsCodes[0];
       const baseRow  = pickBaseByExactCode(baseCode);
       let baseCop  = baseRow ? num(baseRow.copay)      : (compositeCopayNums[0] ?? compositeTotalCopay);
       let baseCB   = baseRow ? num(baseRow.chargeback) : 0;
-      if (!baseRow && BASE_OVERRIDES[baseCode]) {
-        baseCop = BASE_OVERRIDES[baseCode].copay;
-        baseCB  = BASE_OVERRIDES[baseCode].chargeback;
-      }
       parts.push({ code:baseCode, copay:baseCop, chargeback:baseCB, profit:baseCop-baseCB });
 
       // Add-ons
       const addonCount = partsCodes.length - 1;
-
-      // Copays for add-ons
       let addonCopays = [];
       if (compositeCopayNums.length >= partsCodes.length){
-        addonCopays = compositeCopayNums.slice(1); // explicit splits if present
+        addonCopays = compositeCopayNums.slice(1);
       } else {
         const remaining = Math.max(compositeTotalCopay - baseCop, 0);
         if (addonCount <= 1){
@@ -382,8 +351,6 @@
           addonCopays = Array.from({length:addonCount}, ()=>each);
         }
       }
-
-      // Holdback for add-ons from the composite row
       const addonCBEach = addonCount <= 1 ? compositeAddOnCB : (compositeAddOnCB / addonCount);
 
       for (let i=1;i<partsCodes.length;i++){
@@ -409,7 +376,7 @@
       return { label, lines, copay:cop, chargeback:cb, profit:pr, ratio };
     }
 
-    /* ===== UI ===== */
+    /* ===== UI helpers ===== */
     function animateNumber(el,to){
       const from=parseFloat(el.getAttribute('data-prev')||'0'); const start=performance.now(); const dur=380;
       function step(t){ const k=Math.min(1,(t-start)/dur); const v=from+(to-from)*(0.5-Math.cos(Math.PI*k)/2); el.textContent=`$${v.toFixed(2)}`; if(k<1)requestAnimationFrame(step); else el.setAttribute('data-prev',to); }
@@ -520,16 +487,15 @@
     }
 
     function enforceGlassPolicy(rows, wantGlassOnly){
-      if (wantGlassOnly) return rows.filter(r => isGlassBase(r));
-      return rows.filter(r => !isGlassBase(r));
+      return rows.filter(r => wantGlassOnly ? isGlassBase(r) : !isGlassBase(r));
     }
 
     function sunMatchesBase(sunRow, baseRow) {
       const mk = materialKey(baseRow.enhancement || baseRow.subtype || '');
-      const t = N(sunRow.enhancement);
+      const t = N(sunRow.enhancement || sunRow.subtype || '');
       switch (mk) {
-        case 'poly':   return t.includes('polycarb');
-        case 'trivex': return t.includes('trivex');
+        case 'poly':   return /polycarb/.test(t);
+        case 'trivex': return /trivex/.test(t);
         case 'hi174':  return /(1\.74|1\.75)/.test(t);
         case 'hi70':   return /(1\.70|1\.71|above)/.test(t);
         case 'hi167':  return /(1\.66|1\.67)/.test(t);
@@ -539,24 +505,25 @@
       }
     }
 
-    function chooseSunFor(baseRow) {
-      const tintSel = el('lensTint').value;
-      if (tintSel==='clear' || tintSel==='polarized' || tintSel.startsWith('tint-')) return null;
+    function isNOBase(row){
+      const t=N(row.enhancement || row.subtype || '');
+      return /(near\s*office|office|computer|workspace|work\s*space|desk)/i.test(row.enhancement||row.subtype||'');
+    }
+
+    function chooseTransitionsFor(baseRow){
+      // Return PR/PM sun_tech row matching base material and glass policy
       const fam = el('lensFamily').value;
       const wantGlassOnly = el('includeGlass').checked;
-
-      const sunAll = enforceGlassPolicy(
-        byKey('sun_tech').filter(r=>applies(r,fam)),
-        wantGlassOnly
-      );
-
-      if (tintSel==='transitions') {
-        const want = preferPhotoCodeForBase(baseRow); // PM for glass, else PR
-        let pool = sunAll.filter(r => /photochrom/.test(N(r.enhancement)));
-        let choice = pool.find(r => new RegExp('^' + want, 'i').test((r.code || '').trim())) || pool.find(r=>isPPhoto(r));
-        return choice || null;
+      const all = enforceGlassPolicy(byKey('sun_tech').filter(r=>applies(r,fam)), wantGlassOnly)
+                    .filter(r => /photochrom/i.test(r.enhancement||''));
+      const want = preferPhotoCodeForBase(baseRow); // PM for glass base else PR
+      // Prefer same-code start (PR/PM) then material match
+      let best = all.find(r => new RegExp('^'+want+'\\b','i').test((r.code||'').trim()));
+      if (!best){
+        const pool = all.filter(r => sunMatchesBase(r, baseRow));
+        best = pool[0] || all[0] || null;
       }
-      return null;
+      return best || null;
     }
 
     // Pick MN / MP tint row by family/material/variant (“solid” vs “gradient”) from CSV
@@ -565,17 +532,14 @@
       const wantGlassOnly = el('includeGlass').checked;
       const baseIsGlass = wantGlassOnly || isGlassBase(baseRow);
 
-      // gather MN and MP single-code rows
       let candidates = []
         .concat(SIMPLE_BY_CODE.get('MN')||[])
         .concat(SIMPLE_BY_CODE.get('MP')||[])
         .filter(r => applies(r, fam));
 
-      // enforce glass-only policy explicitly against the tint row description
       candidates = candidates.filter(r => baseIsGlass ? isGlassBase(r) : !isGlassBase(r));
 
-      // try to match variant keywords if present in CSV
-      const wantGrad = variant === 'tint-gradient';
+      const wantGrad  = variant === 'tint-gradient';
       const wantSolid = variant === 'tint-solid';
       const hasVariant = r => {
         const t=N(r.enhancement||r.subtype||'');
@@ -584,15 +548,11 @@
         return true;
       };
       let pool = candidates.filter(hasVariant);
-
-      // If nothing matches variant, fall back to any MN/MP for material
       if (!pool.length) pool = candidates;
 
-      // Prefer the one that best matches the base material family (poly/trivex/etc.)
       const mk = materialKey(baseRow.enhancement || baseRow.subtype || '');
       const score = (r)=>{
-        const t=N(r.enhancement||r.subtype||'');
-        let s=0;
+        const t=N(r.enhancement||r.subtype||''); let s=0;
         if (mk==='poly'   && /polycarb/.test(t)) s+=3;
         if (mk==='trivex' && /trivex/.test(t))   s+=3;
         if (mk==='glass'  && /glass/.test(t))    s+=3;
@@ -613,48 +573,38 @@
       const wantAR = el('includeAR').checked;
       const wantAsp = el('includeAspheric').checked;
       const wantOS  = el('includeOversize').checked;
-      const wantGlassOnly = el('includeGlass').checked;   // ENFORCE only-glass when checked
+      const wantGlassOnly = el('includeGlass').checked; // hard policy
       const tintSel = el('lensTint').value;
 
+      // Pools
+      const sunAll = enforceGlassPolicy(byKey('sun_tech').filter(r=>applies(r,fam)), wantGlassOnly);
+      const customPool = DATA.filter(r => applies(r, 'PAL'))
+                             .filter(r => /custom\s*measure/i.test(N(r.enhancement||r.subtype||'')));
+
       // ----- Base candidates
-      // Sun tech pool used for polarized in SV/LINED
-      const sunAll = enforceGlassPolicy(
-        byKey('sun_tech').filter(r=>applies(r,fam)),
-        wantGlassOnly
-      );
-
-      // N/O custom measurements (PAL only)
-      const isCustomMeasure = (row) => /custom\s*measure/i.test(N(row?.enhancement || row?.subtype || ''));
-      const customPool = DATA.filter(r => applies(r, 'PAL')).filter(isCustomMeasure);
-
       let base = [];
       if (fam === 'PAL') {
-        base = enforceGlassPolicy(
-          byKey('progressive_level').filter(r=>applies(r,fam)).filter(r=>{
-            const name=N(r.enhancement);
-            if(!wantAsp && name.includes('aspheric')) return false;
-            if(isCustomMeasure(r)) return false;
-            if (tintSel==='polarized') return /polariz/.test(name); // polarized as material (exclusive)
-            return !/(photochrom|polariz|tint|tinted|sunglass|gradient)/.test(name);
-          }),
-          wantGlassOnly
-        );
+        base = byKey('progressive_level').filter(r=>applies(r,fam)).filter(r=>{
+          const name=N(r.enhancement||r.subtype||'');
+          if(!wantAsp && name.includes('aspheric')) return false;
+          if (/photochrom|tint|tinted|sunglass|gradient/.test(name)) return false;
+          if (tintSel==='polarized') return /polariz/.test(name); // polarized as material (exclusive)
+          return !/polariz/.test(name); // non-sun materials when not polarized
+        });
+        base = enforceGlassPolicy(base, wantGlassOnly);
       } else {
         if (tintSel==='polarized') {
-          // SV/LINED: D-coded polarized base (exclusive)
-          base = sunAll.filter(r => /polariz/.test(N(r.enhancement)) && isDCode(r));
+          // SV/LINED polarized base must be D-code polarized
+          base = sunAll.filter(r => /polariz/.test(N(r.enhancement||r.subtype||'')) && isDCode(r));
         } else {
-          // Normal material base for SV or LINED
           const pool = (fam==='SV' ? byKey('base_material') : byKey('occupational'));
-          base = enforceGlassPolicy(
-            pool.filter(r=>applies(r,fam)).filter(r=>{
-              const name=N(r.enhancement);
-              if(!wantAsp && name.includes('aspheric')) return false;
-              if(/photochrom|polariz|tint|tinted|sunglass|gradient/.test(name)) return false;
-              return true;
-            }),
-            wantGlassOnly
-          );
+          base = pool.filter(r=>applies(r,fam)).filter(r=>{
+            const name=N(r.enhancement||r.subtype||'');
+            if(!wantAsp && name.includes('aspheric')) return false;
+            if(/photochrom|polariz|tint|tinted|sunglass|gradient/.test(name)) return false;
+            return true;
+          });
+          base = enforceGlassPolicy(base, wantGlassOnly);
         }
       }
 
@@ -662,7 +612,7 @@
       function rankAR(ars){
         const gradeVal = (s)=>{ const m=String(s||'').match(/\b([A-D])\b/i); if(!m) return null; return {A:1,B:2,C:3,D:4}[m[1].toUpperCase()]||null; };
         return [...ars].sort((a,b)=>{
-          const ga=gradeVal(a.enhancement)||-1, gb=gradeVal(b.enhancement)||-1;
+          const ga=gradeVal(a.enhancement||a.subtype)||-1, gb=gradeVal(b.enhancement||b.subtype)||-1;
           if(ga!==gb) return gb-ga; // prefer A
           const pa=num(a.copay)-num(a.chargeback);
           const pb=num(b.copay)-num(b.chargeback);
@@ -675,22 +625,23 @@
 
       const overs = wantOS ? (byKey('oversize').filter(r=>applies(r,fam))[0] || null) : null;
 
-      // Build bundle add-ons per selected sun/tint
       function computeAddOnsFor(baseRow){
         const addOns = [];
 
-        // Transitions (PR/PM) add-on
-        const tr = chooseSunFor(baseRow);
-        if (tr) addOns.push(tr);
+        // Transitions (exclusive vs others handled by UI choice)
+        if (tintSel==='transitions'){
+          const tr = chooseTransitionsFor(baseRow);
+          if (tr) addOns.push(tr);
+        }
 
-        // Tint (MN/MP) add-on
+        // Tint (MN/MP)
         if (tintSel==='tint-solid' || tintSel==='tint-gradient'){
           const tintRow = pickTintRow(baseRow, tintSel);
           if (tintRow) addOns.push(tintRow);
         }
 
-        // Custom N/O (PAL only, user-controlled)
-        if (el('includeCM')?.checked && fam==='PAL'){
+        // Custom N/O (only when base is an N/O PAL)
+        if (el('includeCM')?.checked && fam==='PAL' && isNOBase(baseRow)){
           if (customPool.length) addOns.push(customPool[0]);
         }
 
@@ -701,7 +652,7 @@
       }
 
       function buildBundle(m, arRow){
-        // Polarized is exclusive: already baked into base selection logic, so we DO NOT add any sun add-on here.
+        // Polarized is exclusive: do not add any sun/tint/transition add-ons.
         const addOns = (tintSel==='polarized') ? [] : computeAddOnsFor(m);
         return makeBundle(m, [arRow, ...addOns]);
       }
@@ -718,7 +669,7 @@
         return;
       }
 
-      // Left→Right tiers
+      // Tiers
       const MaxPrice = Math.max(...all.map(b => b.copay));
       function mostProfit(arr){
         let pick=null;
